# LidarIdentity

./: README.md  height_map.txt  inference.txt  lookup_table.npy  lookup_table_main.npy  lookup_table_sub.npy  polygons.txt  r1.sh  r2.sh  ra.sh  testcrc.py
src/hikrobot_camera/: CMakeLists.txt
src/hikrobot_camera/config/: camera.yaml  short.yaml  subcamera.yaml
src/hikrobot_camera/include/: hikrobot_camera.hpp
src/hikrobot_camera/launch/: hikrobot_short.launch  hikrobot_short_rviz.launch  hikrobot_subcamera.launch  hikrobot_subcamera_rviz.launch
src/hikrobot_camera/script/: Communicating.py  app.py  build_map.py  calculate_camera_ex.py  camera.py  commute.py  comtrans.py  config.py  crc_test.py  lidar.py  location.py  location_4p.py  main.py  minimap.py  ser_api.py  show_process_map.py  test.py  test2.py  test_location.py  track.py  yolo_test.py  串口发送函数.py
src/hikrobot_camera/script/camerainfo/: camera0.yaml  camera1.yaml
src/hikrobot_camera/script/locate_info/: 0_0_2022-06-12-10-25-25.txt  0_1_2022-06-16-01-46-48.txt  10_0_2024-06-01-04-43-31.txt  10_1_2024-06-01-08-08-05.txt  11_0_2024-06-01-06-05-29.txt  11_1_2024-06-01-08-08-39.txt  12_0_2024-07-01-11-58-18.txt  12_1_2024-08-03-00-06-32.txt  13_0_2024-07-08-21-08-19.txt  13_1_2024-08-03-00-07-55.txt  14_0_2024-07-08-21-21-05.txt  14_1_2024-08-03-00-17-26.txt  15_0_2024-07-08-21-52-12.txt  15_1_2024-08-03-00-18-31.txt  16_0_2024-07-08-21-53-55.txt  16_1_2024-08-03-00-38-04.txt  17_0_2024-07-08-21-55-54.txt  17_1_2024-08-03-00-40-18.txt  18_0_2024-07-08-21-58-56.txt  18_1_2024-08-05-12-14-14.txt  19_0_2024-07-08-22-00-48.txt  19_1_2024-08-06-12-51-52.txt  1_0_2022-06-13-22-42-41.txt  (+49 more)
src/hikrobot_camera/src/: hikrobot_camera.cpp  hikrobot_short.cpp  hikrobot_subcamera.cpp
(+31 files in other folders)
